Lower requirement on RecipeSource to return a collection